test/tests/compiler/1_int_constants/invalid_lex/invalid_identifier.plx
# '1foo' is not a valid token, because identifier can't start with digits.
pub fn main(none) i32 {
    return 1foo
}
